Closed
Bug 1583337
Opened 6 years ago
Closed 6 years ago
Crash Report [@ mozilla::layers::SourceSurfaceCanvasRecording::SourceSurfaceCanvasRecording ]
Categories
(Core :: Graphics: Canvas2D, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla71
| Tracking | Status | |
|---|---|---|
| firefox71 | --- | fixed |
People
(Reporter: gcp, Assigned: bobowen)
References
Details
Crash Data
Attachments
(1 file)
| Reporter | ||
Comment 1•6 years ago
|
||
While the browser was running and observing tcec-chess.com
Updated•6 years ago
|
Crash Signature: [@ mozilla::layers::SourceSurfaceCanvasRecording::SourceSurfaceCanvasRecording]
| Assignee | ||
Comment 3•6 years ago
|
||
This looks like I just missed a null check in a new function I added recently, but I need to check the implications of returning null as well.
Assignee: nobody → bobowencode
Status: NEW → ASSIGNED
Priority: -- → P1
| Assignee | ||
Comment 4•6 years ago
|
||
OK I've managed to convince myself that all we need here is a null check and to return null.
I've managed to reproduce with that fix (and debugging) in place as well.
| Assignee | ||
Comment 5•6 years ago
|
||
The CanvasChild must be in the process of being destroyed at this point anyway.
Pushed by bobowencode@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/60d9f8a12641
Return null in CanvasChild::WrapSurface if we don't have a recorder. r=jrmuizel
Comment 7•6 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in
before you can comment on or make changes to this bug.
Description
•