Bug 1583337: Return null in CanvasChild::WrapSurface if we don't have a recorder. r=jrmuizel

The CanvasChild must be in the process of being destroyed at this point anyway.

Differential Revision: https://phabricator.services.mozilla.com/D47443